增加了标准象棋模板，并同步到openapi文档；删去了废弃的user模块；对后端和接口文档做了一些对齐。
